Change "Authentication object" to "Auth object" throughout the docs (#753)
Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

--- a/docs/quickstarts/remix.mdx
+++ b/docs/quickstarts/remix.mdx
@@ -381,7 +381,7 @@ export default function Example() {
 
 <Tabs type="function" items={["Loader Function", "Action Function"]}>
   <Tab>
-  The [`getAuth()`][get-auth] helper allows you to access the [Authentication Object][auth-obj], including the current `userId`. You can use this helper to protect your loader function or get data for the initial render of the route.
+  The [`getAuth()`][get-auth] helper allows you to access the [`Auth` object](/docs/references/nextjs/auth-object), including the current `userId`. You can use this helper to protect your loader function or get data for the initial render of the route.
 
   ```tsx filename="routes/example.tsx"
   export const loader: LoaderFunction = async (args) => {
@@ -402,7 +402,7 @@ export default function Example() {
   </Tab>
 
   <Tab>
-  The [`getAuth()`][get-auth] helper allows you to access the [Authentication Object][auth-obj]. You can use the returns from `getAuth()` to protect the action function, update the user or perform mutations on data in your database.
+  The [`getAuth()`][get-auth] helper allows you to access the [`Auth` object](/docs/references/nextjs/auth-object). You can use the returns from `getAuth()` to protect the action function, update the user or perform mutations on data in your database.
 
   ```tsx filename="routes/example.tsx"
   export const action: ActionFunction = async (args) => {
@@ -487,4 +487,3 @@ Now that you have an application integrated with Clerk, you will want to read th
 </div>
 
 [get-auth]: /docs/references/nextjs/get-auth
-[auth-obj]: /docs/references/nextjs/authentication-object
