--- a/docs/references/nextjs/auth.mdx
+++ b/docs/references/nextjs/auth.mdx
@@ -5,7 +5,7 @@ description: Access minimal authentication data for managing sessions and data f
 
 # `auth()`
 
-The `auth()` helper returns the [`Authentication`](/docs/references/nextjs/authentication-object) object of the currently active user. This is the same `Authentication` object that is returned by the [`getAuth()`](/docs/references/nextjs/get-auth) hook. However, it can be used in Server Components, Route Handlers, and Server Actions.
+The `auth()` helper returns the [`Authentication`](/docs/references/nextjs/auth-object) object of the currently active user. This is the same `Authentication` object that is returned by the [`getAuth()`](/docs/references/nextjs/get-auth) hook. However, it can be used in Server Components, Route Handlers, and Server Actions.
 
 The `auth()` helper does require [Middleware](/docs/references/nextjs/auth-middleware).
 
@@ -13,7 +13,7 @@ A Route Handler added to [`publicRoutes`](/docs/references/nextjs/auth-middlewar
 
 ## Return type of `auth()`
 
-`auth()` returns the [`Authentication`](/docs/references/nextjs/authentication-object) object with a few extra properties:
+`auth()` returns the [`Auth`](/docs/references/nextjs/auth-object) object with a few extra properties:
 
 - [`protect()`](#protect)
 - [`redirectToSignIn()`](#redirect-to-sign-in)
@@ -36,7 +36,7 @@ You can use the `protect()` helper in two ways:
 | --- | --- | --- |
 | `role?` | `string` | The role to check for. |
 | `permission?` | `string` | The permission to check for. |
-| `has?` | <code>(isAuthorizedParams: CheckAuthorizationParamsWithCustomPermissions) => boolean</code> | A function that returns a boolean based on the permission or role provided as parameter. Can be used for authorization. See the dedicated [`has()`](/docs/references/nextjs/authentication-object#has) section for more information. |
+| `has?` | <code>(isAuthorizedParams: CheckAuthorizationParamsWithCustomPermissions) => boolean</code> | A function that returns a boolean based on the permission or role provided as parameter. Can be used for authorization. See the dedicated [`has()`](/docs/references/nextjs/auth-object#has) section for more information. |
 | `unauthorizedUrl?` | `string` | The URL to redirect the user to if they are not authorized. |
 | `unauthenticatedUrl?` | `string` | The URL to redirect the user to if they are not authenticated. |
 
@@ -108,13 +108,13 @@ export default async function Layout({ children }:{ children: React.ReactNode })
 
 ## Use `auth()` to check if a user is authorized
 
-`auth()` returns the [`Authentication`](/docs/references/nextjs/authentication-object#authentication-object) object, which includes the `has()` helper. `auth()` also returns the `protect()` helper.
+`auth()` returns the [`Auth`](/docs/references/nextjs/auth-object#auth-object) object, which includes the `has()` helper. `auth()` also returns the `protect()` helper.
 
 `has()` and `protect()` can be used to check if a user is authorized to access certain parts of your application.
 
 ### Use `has()` to check if a user is authorized
 
-Use the [`has()`](/docs/references/nextjs/authentication-object#has) helper in order to check if a user is authorized to access a component.
+Use the [`has()`](/docs/references/nextjs/auth-object#has) helper in order to check if a user is authorized to access a component.
 
 In the following example:
 - `has()` is used to check if a user has the `org:team_settings:manage` permission.
