pull in some great updates for main docs

--- a/docs/components/unstyled/sign-in-button.mdx
+++ b/docs/components/unstyled/sign-in-button.mdx
@@ -7,136 +7,128 @@ description: The <SignInButton> component is a button that links to the sign-in 
 
 The `<SignInButton>` component is a button that links to the sign-in page or displays the sign-in modal.
 
-## Usage
-
-#### Basic usage
-
-<CodeBlockTabs type="framework" options={["Next.js", "React", "Remix", "Gatsby"]}>
-  ```jsx filename="pages/index.js"
-  import { SignInButton } from "@clerk/nextjs";
-
-  export default function Home() {
-    return (
-      <div>
-      <h1> Sign in </h1>
-        <SignInButton>
-      </div>
-    );
-  }
-  ```
-
-  ```jsx filename="example.js"
-  import { SignInButton } from "@clerk/clerk-react";
-
-  export default function Example() {
-    return (
-      <div>
-      <h1> Sign in </h1>
-        <SignInButton>
-      </div>
-    );
-  }
-  ```
-
-  ```jsx filename="pages/index.js"
-  import { SignInButton } from "@clerk/remix";
-
-  export default function Home() {
-    return (
-      <div>
-      <h1> Sign in </h1>
-        <SignInButton>
-      </div>
-    );
-  }
-  ```
-
-  ```jsx filename="pages/index.js"
-  import { SignInButton } from "gatsby-plugin-clerk";
-
-  export default function Home() {
-    return (
-      <div>
-      <h1> Sign in </h1>
-        <SignInButton>
-      </div>
-    );
-  }
-  ```
-</CodeBlockTabs>
-
-#### Custom usage
-
-In some cases you will want to use your own button, or button text. You can do that by wrapping your button up.
-
-<CodeBlockTabs type="framework" options={["Next.js", "React", "Remix", "Gatsby"]}>
-  ```jsx filename="pages/index.js"
-  import { SignInButton } from "@clerk/nextjs";
-
-  export default function Home() {
-    return (
-      <div>
-      <h1> Sign in </h1>
-        <SignInButton>
-        <button>Sign in with Clerk</button>
-        </SignInButton>
-      </div>
-    );
-  }
-  ```
-
-  ```jsx filename="example.js"
-  import { SignInButton } from "@clerk/clerk-react";
-
-  export default function Example() {
-    return (
-      <div>
-      <h1> Sign in </h1>
-        <SignInButton>
-        <button>Sign in with Clerk</button>
-        </SignInButton>
-      </div>
-    );
-  }
-  ```
-
-  ```jsx filename="pages/index.js"
-  import { SignInButton } from "@clerk/remix";
-
-  export default function Home() {
-    return (
-      <div>
-      <h1> Sign in </h1>
-        <SignInButton>
-        <button>Sign in with Clerk</button>
-        </SignInButton>
-      </div>
-    );
-  }
-  ```
-
-  ```jsx filename="pages/index.js"
-  import { SignInButton } from "gatsby-plugin-clerk";
-
-  export default function Home() {
-    return (
-      <div>
-      <h1> Sign in </h1>
-        <SignInButton>
-        <button>Sign in with Clerk</button>
-        </SignInButton>
-      </div>
-    );
-  }
-  ```
-</CodeBlockTabs>
-
-## Properties
+## `<SignInButton>` properties
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `redirectUrl` | `string` | Full URL or path to navigate after successful sign in or sign up.<br /> The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
-| `afterSignInUrl` | `string` | The full URL or path to navigate after a successful sign in. |
-| `afterSignUpUrl` | `string` | The full URL or path to navigate after a successful sign up. |
-| `mode` | `'redirect' \| 'modal'` | Determines what happens when a user clicks on the `<SignInButton>`. Setting this to `'redirect'` will redirect the user to the sign-in route. Setting this to `'modal'` will open a modal on the current route.<br />Defaults to 'redirect'`
+| `redirectUrl?` | `string` | Full URL or path to navigate after successful sign in or sign up.<br /> The same as setting `afterSignInUrl` and `afterSignUpUrl` to the same value. |
+| `afterSignInUrl?` | `string` | The full URL or path to navigate after a successful sign in. |
+| `afterSignUpUrl?` | `string` | The full URL or path to navigate after a successful sign up. |
+| `mode?` | `'redirect' \| 'modal'` | Determines what happens when a user clicks on the `<SignInButton>`. Setting this to `'redirect'` will redirect the user to the sign-in route. Setting this to `'modal'` will open a modal on the current route.<br />Defaults to `'redirect'` |
+| `children?` | `React.ReactNode` | Children you want to wrap the `<SignInButton>` in. |
 
+## How to use the `<SignInButton>` component
+
+### Basic usage
+
+<CodeBlockTabs type="framework" options={["Next.js", "React", "Remix", "Gatsby"]}>
+  ```jsx filename="pages/index.js"
+  import { SignInButton } from "@clerk/nextjs";
+
+  export default function Home() {
+    return (
+      <div>
+        <SignInButton />
+      </div>
+    );
+  }
+  ```
+
+  ```jsx filename="example.js"
+  import { SignInButton } from "@clerk/clerk-react";
+
+  export default function Example() {
+    return (
+      <div>
+        <SignInButton />
+      </div>
+    );
+  }
+  ```
+
+  ```jsx filename="pages/index.js"
+  import { SignInButton } from "@clerk/remix";
+
+  export default function Home() {
+    return (
+      <div>
+        <SignInButton />
+      </div>
+    );
+  }
+  ```
+
+  ```jsx filename="pages/index.js"
+  import { SignInButton } from "gatsby-plugin-clerk";
+
+  export default function Home() {
+    return (
+      <div>
+        <SignInButton />
+      </div>
+    );
+  }
+  ```
+</CodeBlockTabs>
+
+### Custom usage
+
+In some cases, you will want to use your own button, or button text. You can do that by wrapping your button in the `<SignInButton>` component.
+
+<CodeBlockTabs type="framework" options={["Next.js", "React", "Remix", "Gatsby"]}>
+  ```jsx filename="pages/index.js"
+  import { SignInButton } from "@clerk/nextjs";
+
+  export default function Home() {
+    return (
+      <div>
+        <SignInButton>
+          <button>Sign in with Clerk</button>
+        </SignInButton>
+      </div>
+    );
+  }
+  ```
+
+  ```jsx filename="example.js"
+  import { SignInButton } from "@clerk/clerk-react";
+
+  export default function Example() {
+    return (
+      <div>
+        <SignInButton>
+          <button>Sign in with Clerk</button>
+        </SignInButton>
+      </div>
+    );
+  }
+  ```
+
+  ```jsx filename="pages/index.js"
+  import { SignInButton } from "@clerk/remix";
+
+  export default function Home() {
+    return (
+      <div>
+        <SignInButton>
+          <button>Sign in with Clerk</button>
+        </SignInButton>
+      </div>
+    );
+  }
+  ```
+
+  ```jsx filename="pages/index.js"
+  import { SignInButton } from "gatsby-plugin-clerk";
+
+  export default function Home() {
+    return (
+      <div>
+        <SignInButton>
+          <button>Sign in with Clerk</button>
+        </SignInButton>
+      </div>
+    );
+  }
+  ```
+</CodeBlockTabs>
