--- a/docs/components/unstyled/sign-out-button.mdx
+++ b/docs/components/unstyled/sign-out-button.mdx
@@ -7,11 +7,26 @@ description: The `<SignOutButton>` component is a button that signs a user out.
 
 The `<SignOutButton>` component is a button that signs a user out. By default, it is a `<button>` tag that says **Sign Out**, but it is completely customizable by passing children.
 
-## Usage
+## `<SignOutButton>` properties
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `redirectUrl?` | `string` | Full URL or path to navigate to after signing out. |
+| `signOutOptions?` | [`SignOutOptions`](#sign-out-options) | Options for signing out. Includes `sessionId` which if passed, signs the user out of a specific session. Useful for multi-session applications. |
+| `children?` | `React.ReactNode` | Children you want to wrap the `<SignOutButton>` in. |
+
+### `SignOutOptions`
+
+The type of the `signOutOptions` prop for the `<SignOutButton>` component is defined as follows:
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `sessionId?` | `string` | The ID of a specific session to sign out of. Useful for multi-session applications. |
+| `redirectUrl? ` | `string` | Full URL or path to navigate to after signing out. |
+
+## How to use the `<SignOutButton>` component
 
 ### Basic usage
-
-The example below shows how to use the `<SignOutButton>` component. 
 
 <Tabs type="framework" items={["Next.js", "React", "Remix", "Gatsby"]}>
   <Tab>
@@ -22,8 +37,7 @@ The example below shows how to use the `<SignOutButton>` component.
       export default function Home() {
         return (
           <div>
-          <h1> Sign out </h1>
-            <SignOutButton>
+            <SignOutButton />
           </div>
         );
       }
@@ -35,8 +49,7 @@ The example below shows how to use the `<SignOutButton>` component.
       export default function Home() {
         return (
           <div>
-          <h1> Sign out </h1>
-            <SignOutButton>
+            <SignOutButton />
           </div>
         );
       }
@@ -51,8 +64,7 @@ The example below shows how to use the `<SignOutButton>` component.
     export default function Example() {
       return (
         <div>
-        <h1> Sign out </h1>
-          <SignOutButton>
+          <SignOutButton />
         </div>
       );
     }
@@ -66,8 +78,7 @@ The example below shows how to use the `<SignOutButton>` component.
     export default function Home() {
       return (
         <div>
-        <h1> Sign out </h1>
-          <SignOutButton>
+          <SignOutButton />
         </div>
       );
     }
@@ -81,8 +92,7 @@ The example below shows how to use the `<SignOutButton>` component.
     export default function Home() {
       return (
         <div>
-        <h1> Sign out </h1>
-          <SignOutButton>
+          <SignOutButton />
         </div>
       );
     }
@@ -103,7 +113,6 @@ You can create a custom button by wrapping your own button, or button text, in t
       export default function Home() {
         return (
           <div>
-          <h1> Sign out </h1>
             <SignOutButton>
               <button>Sign out</button>
             </SignOutButton>
@@ -118,7 +127,6 @@ You can create a custom button by wrapping your own button, or button text, in t
       export default function Home() {
         return (
           <div>
-          <h1> Sign out </h1>
             <SignOutButton>
               <button>Sign out</button>
             </SignOutButton>
@@ -136,7 +144,6 @@ You can create a custom button by wrapping your own button, or button text, in t
     export default function Example() {
       return (
         <div>
-        <h1> Sign out </h1>
           <SignOutButton>
             <button>Sign out</button>
           </SignOutButton>
@@ -153,7 +160,6 @@ You can create a custom button by wrapping your own button, or button text, in t
     export default function Home() {
       return (
         <div>
-        <h1> Sign in </h1>
           <SignOutButton>
             <button>Sign out</button>
           </SignOutButton>
@@ -170,7 +176,6 @@ You can create a custom button by wrapping your own button, or button text, in t
     export default function Home() {
       return (
         <div>
-        <h1> Sign out </h1>
           <SignOutButton>
             <button>Sign out</button>
           </SignOutButton>
@@ -183,18 +188,22 @@ You can create a custom button by wrapping your own button, or button text, in t
 
 ### Multi-session usage
 
+#### Sign out of all sessions
+
+Clicking the `<SignOutButton>` component signs the user out of all sessions. This is the default behavior.
+
 #### Sign out of a specific session
 
 You can sign out of a specific session by passing in a `sessionId` to the `signOutOptions` prop. This is useful for signing a single account out of a multi-session (multiple account) application.
 
-In the example below, the `sessionId` is retrieved from the [`useAuth()`](/docs/references/react/use-auth) hook.
+In the example below, the `sessionId` is retrieved from the [`useAuth()`](/docs/references/react/use-auth) hook. If the user is not signed in, the `sessionId` will be `null`, and the user is shown the [`<SignInButton>`](/docs/components/unstyled/sign-in-button) component. If the user is signed in, the user is shown the `<SignOutButton>` component, which when clicked, signs the user out of that specific session.
 
 <Tabs type="framework" items={["Next.js", "React", "Remix", "Gatsby"]}>
   <Tab>
     <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
       ```tsx filename="app/page.tsx"
       "use client"
-      
+
       import { SignInButton, SignOutButton, useAuth } from "@clerk/nextjs";
 
       export default function Home() {
@@ -203,15 +212,13 @@ In the example below, the `sessionId` is retrieved from the [`useAuth()`](/docs/
         if (!sessionId) {
           return (
             <div>
-              <h1> Sign in </h1>
-              <SignInButton>
+              <SignInButton />
             </div>
           );
         }
 
         return (
           <div>
-            <h1> Sign out </h1>
             <SignOutButton signOutOptions={{ sessionId }} />
           </div>
         );
@@ -227,15 +234,13 @@ In the example below, the `sessionId` is retrieved from the [`useAuth()`](/docs/
         if (!sessionId) {
           return (
             <div>
-              <h1> Sign in </h1>
-              <SignInButton>
+              <SignInButton />
             </div>
           );
         }
 
         return (
           <div>
-            <h1> Sign out </h1>
             <SignOutButton signOutOptions={{ sessionId }} />
           </div>
         );
@@ -250,19 +255,17 @@ In the example below, the `sessionId` is retrieved from the [`useAuth()`](/docs/
 
     export default function Home() {
       const { sessionId } = useAuth();
-     
+
       if (!sessionId) {
         return (
           <div>
-            <h1> Sign in </h1>
-            <SignInButton>
+            <SignInButton />
           </div>
         );
       }
 
       return (
         <div>
-          <h1> Sign out </h1>
           <SignOutButton signOutOptions={{ sessionId }} />
         </div>
       );
@@ -280,15 +283,13 @@ In the example below, the `sessionId` is retrieved from the [`useAuth()`](/docs/
       if (!sessionId) {
         return (
           <div>
-            <h1> Sign in </h1>
-            <SignInButton>
+            <SignInButton />
           </div>
         );
       }
 
       return (
         <div>
-          <h1> Sign out </h1>
           <SignOutButton signOutOptions={{ sessionId }} />
         </div>
       );
@@ -306,15 +307,13 @@ In the example below, the `sessionId` is retrieved from the [`useAuth()`](/docs/
       if (!sessionId) {
         return (
           <div>
-            <h1> Sign in </h1>
-            <SignInButton>
+            <SignInButton />
           </div>
         );
       }
 
       return (
         <div>
-          <h1> Sign out </h1>
           <SignOutButton signOutOptions={{ sessionId }} />
         </div>
       );
@@ -322,106 +321,3 @@ In the example below, the `sessionId` is retrieved from the [`useAuth()`](/docs/
     ```
   </Tab>
 </Tabs>
-
-#### Sign out of all sessions
-
-You can sign out of all currently active sessions by passing a callback that returns the [`signOut()`](/docs/custom-flows/multi-session-applications#sign-out-all-sessions) method to the `signOutCallback` prop. This is useful for signing out all currently active accounts from a multi-session (multiple account) application.
-
-In the example below, the `signOut()` method is retrieved from the [`useClerk()`](/docs/references/react/use-clerk) hook.
-
-<Tabs type="framework" items={["Next.js", "React", "Remix", "Gatsby"]}>
-  <Tab>
-    <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
-      ```tsx filename="app/page.tsx"
-      "use client";
-
-      import { SignOutButton, useClerk } from "@clerk/nextjs";
-
-      export default function Home() {
-        const { signOut } = useClerk();
-
-        return (
-          <div>
-            <h1> Sign out </h1>
-            <SignOutButton signOutCallback={() => signOut()} />
-          </div>
-        );
-      }
-      ```
-
-      ```tsx filename="pages/index.tsx"
-      import { SignOutButton, useClerk } from "@clerk/nextjs";
-
-      export default function Home() {
-        const { signOut } = useClerk();
-
-        return (
-          <div>
-            <h1> Sign out </h1>
-            <SignOutButton signOutCallback={() => signOut()} />
-          </div>
-        );
-      }
-      ```
-    </CodeBlockTabs>
-  </Tab>
-
-  <Tab>
-    ```jsx filename="example.js"
-    import { SignOutButton, useClerk } from "@clerk/clerk-react";
-
-    export default function Home() {
-      const { signOut } = useClerk();
-
-      return (
-        <div>
-          <h1> Sign out </h1>
-          <SignOutButton signOutCallback={() => signOut()} />
-        </div>
-      );
-    }
-    ```
-  </Tab>
-
-  <Tab>
-    ```jsx filename="pages/index.js"
-    import { SignOutButton, useClerk } from "@clerk/remix";
-
-    export default function Home() {
-      const { signOut } = useClerk();
-
-      return (
-        <div>
-          <h1> Sign out </h1>
-          <SignOutButton signOutCallback={() => signOut()} />
-        </div>
-      );
-    }
-    ```
-  </Tab>
-
-  <Tab>
-    ```jsx filename="pages/index.js"
-    import { SignOutButton, useClerk } from "gatsby-plugin-clerk";
-
-    export default function Home() {
-      const { signOut } = useClerk();
-
-      return (
-        <div>
-          <h1> Sign out </h1>
-          <SignOutButton signOutCallback={() => signOut()} />
-        </div>
-      );
-    }
-    ```
-  </Tab>
-</Tabs>
-
-## Properties
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `signOutCallback?` | <code>{`() => (void \| Promise<any>)`}</code> | A promise to handle after the sign out has successfully happened. |
-| `children?` | `React.ReactNode` | children you want to wrap the `<SignOutButton>` in. |
-| `signOutOptions?` | `SignOutOptions` | Object that has a `sessionId` property. The `sessionId` can be passed in to sign out a specific session, which is useful for multisession applications. |
