--- a/docs/guides/authjs-migration.mdx
+++ b/docs/guides/authjs-migration.mdx
@@ -23,7 +23,7 @@ description: Learn how to migrate an application using Auth.js to use Clerk for 
 >
 
 - Install `@clerk/nextjs`
-- Set environment keys
+- Set environment variables
 - Wrap your Next.js app in `<ClerkProvider />`
 - Set up sign-up and sign-in UI
 - Protect your app
@@ -60,7 +60,7 @@ pnpm add @clerk/nextjs
 
 </CodeBlockTabs>
 
-### Set environment keys
+### Set environment variables
 
 Add the following code to your `.env.local` file to set your public and secret keys.
 
@@ -319,7 +319,7 @@ This walkthrough will help you move user data from your existing database to Cle
 To retain the user data in your database for easy querying, check out the documentation on [data synchronization with webhooks](/docs/integrations/webhooks/sync-data).
 
 1. Clone `github.com/clerk/migration-script`
-2. Create a `.env` file in the root of the cloned repository with the `CLERK_SECRET_KEY` **of your `Production` instance**.
+2. Create an `.env` file in the root of the cloned repository with the `CLERK_SECRET_KEY` **of your `Production` instance**.
 3. Export all the user data from your database into a `users.json` file. The file should be in the following format:
 ```json filename="users.json"
 [
