--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -18,7 +18,7 @@ description: Add authentication and user management to your Next.js app with Cle
 >
 
 - Install `@clerk/nextjs`
-- Set up your environment keys
+- Set up your environment variables
 - Wrap your Next.js app in `<ClerkProvider />`
 - Limit access to authenticated users
 - Specify which routes are publicly accessible
@@ -53,14 +53,14 @@ pnpm add @clerk/nextjs
 
 </CodeBlockTabs>
 
-### Set your environment keys
+### Set your environment variables
 
-1. If you don't have a `.env.local` file in the root directory of your Next.js project, create one now.
-2. Find your publishable key and secret key. If you're signed into Clerk, the `.env.local` snippet below will contain your keys. Otherwise:
+1. If you don't have an `.env.local` file in the root directory of your Next.js project, create one now.
+2. Find your Clerk publishable key and secret key. If you're signed into Clerk, the `.env.local` snippet below will contain your keys. Otherwise:
   - Navigate to your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=api-keys).
   - Select your application, then select **🔑 API Keys** in the sidebar menu.
   - You can copy your keys from the **Quick Copy** section.
-3. Add your keys to your `.env.local` file. 
+3. Add your keys to your `.env.local` file.
 
 The final result should look as follows:
 
@@ -89,7 +89,7 @@ Select your preferred router below to learn how to make this data available acro
   }: {
     children: React.ReactNode
   }) {
-    return (        
+    return (
       <ClerkProvider>
         <html lang="en">
           <body>{children}</body>
@@ -104,7 +104,7 @@ Select your preferred router below to learn how to make this data available acro
     import { ClerkProvider } from "@clerk/nextjs";
     import type { AppProps } from "next/app";
     function MyApp({ Component, pageProps }: AppProps) {
-      return (          
+      return (
         <ClerkProvider {...pageProps}>
           <Component {...pageProps} />
         </ClerkProvider>
@@ -120,7 +120,7 @@ Select your preferred router below to learn how to make this data available acro
 Now that Clerk is installed and mounted in your application, you can decide which pages are public and which should require authentication to access:
 
 1. Create a `middleware.ts` file at the root of your project, or in your `src/` directory if you have one.
-2. In your `middleware.ts`, export Clerk's [`authMiddleware`](https://clerk.com/docs/references/nextjs/auth-middleware) helper:
+2. In your `middleware.ts`, export Clerk's [`authMiddleware()`](https://clerk.com/docs/references/nextjs/auth-middleware) helper:
   ```tsx filename="middleware.ts"
   import { authMiddleware } from "@clerk/nextjs";
 
@@ -178,7 +178,7 @@ Access your app to verify that authentication is enabled:
 
 [`<UserButton />`](/docs/components/user/user-button) is a [prebuilt component](/docs/components/overview) that allows users to log in, log out, and manage their account information.
 
-Use the following code to add a `<UserButton />` to your app: 
+Use the following code to add a `<UserButton />` to your app:
 
 <CodeBlockTabs type="router" options={["App Router", "Pages Router"]}>
 ```tsx filename="app/page.tsx" {1,6}
