--- a/docs/quickstarts/remix.mdx
+++ b/docs/quickstarts/remix.mdx
@@ -31,9 +31,9 @@ Once you have a Remix application ready, you need to install Clerk's Remix SDK. 
   ```
 </CodeBlockTabs>
 
-### Set environment keys
+### Set environment variables
 
-Below is an example of a `.env.local` file. 
+Below is an example of an `.env.local` file.
 
 **Pro tip!** If you are signed into your Clerk Dashboard, your secret key should become visible by clicking on the eye icon. Otherwise, you can find your keys in the Clerk Dashboard on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page.
 
@@ -385,7 +385,7 @@ export default function Example() {
 
   ```tsx filename="routes/example.tsx"
   export const loader: LoaderFunction = async (args) => {
-    // Use getAuth to retrieve user data 
+    // Use getAuth to retrieve user data
     const { userId, sessionId, getToken } = await getAuth(args);
 
     // If there is no userId, then redirect to sign-in route
@@ -407,7 +407,7 @@ export default function Example() {
   ```tsx filename="routes/example.tsx"
   export const action: ActionFunction = async (args) => {
 
-    // Use getAuth to retrieve user data 
+    // Use getAuth to retrieve user data
     const { userId, getToken } = await getAuth(args)
 
     // Use the userId to perform a mutation on data in your database
