--- a/docs/references/nextjs/auth-middleware.mdx
+++ b/docs/references/nextjs/auth-middleware.mdx
@@ -30,7 +30,7 @@ With the recommended matcher, all routes are protected by Clerk's authentication
 
 ### Default behaviour
 
-If there is no `afterAuth` present in the middleware, then `authMiddleware` will fall back to its default behavior:
+If there is no `afterAuth` present in the middleware, then `authMiddleware()` will fall back to its default behavior:
 
 - If the [`.env` based settings](/docs/references/nextjs/custom-signup-signin-pages#update-your-environment-variables) for the sign-in and sign-up routes are present, add the sign-in and sign-up routes to any routes listed in `publicRoutes`.
 - If the `.env` based settings are not present, add `/sign-in` and `/sign-up` to any routes listed in `publicRoutes`.
@@ -40,7 +40,7 @@ If there is no `afterAuth` present in the middleware, then `authMiddleware` will
 
 #### Example
 
-Assuming that the `.env` based settings for sign-in and sign-up are set to `/sign-in` and `/sign-up` respectively, the following `authMiddleware` would make the routes `/`, `/contact`, `/sign-in` and `/sign-up` public, no routes ignored, and all remaining routes protected.
+Assuming that the `.env` based settings for sign-in and sign-up are set to `/sign-in` and `/sign-up` respectively, the following `authMiddleware()` would make the routes `/`, `/contact`, `/sign-in` and `/sign-up` public, no routes ignored, and all remaining routes protected.
 
 <CodeBlockTabs options={["middleware.ts", ".env.local"]}>
 
