--- a/docs/components/organization/create-organization.mdx
+++ b/docs/components/organization/create-organization.mdx
@@ -14,7 +14,18 @@ description: The `<CreateOrganization />` component is used to render an organiz
 
 The `<CreateOrganization />` component is used to render an organization creation UI that allows users to create brand new organizations within your application.
 
-## Usage
+## `<CreateOrganization />` properties
+
+All props below are optional.
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `afterCreateOrganizationUrl` | `string` | Full URL or path to navigate after creating a new organization. |
+| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. Defaults to `'path'`. |
+| `path` | `string` | The path where the component is mounted when path-based routing is used. <br />For example, `/create-org`<br />This prop is ignored in hash- and virtual-based routing. |
+| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
+
+## How to use the `<CreateOrganization />` component
 
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
@@ -60,18 +71,7 @@ The `<CreateOrganization />` component is used to render an organization creatio
   </Tab>
 </Tabs>
 
-## Properties
-
-All props below are optional.
-
-| Name | Type | Description |
-| --- | --- | --- |
-| `afterCreateOrganizationUrl` | `string` | Full URL or path to navigate after creating a new organization. |
-| `routing` | `'hash' \| 'path' \| 'virtual'` | The routing strategy for your pages. |
-| `path` | `string` | The path where the component is mounted when path-based routing is used. -e.g. /create-org. This prop is ignored in hash and virtual based routing. |
-| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
-
-## Customization
+## How to customize the `<CreateOrganization />` component
 
 To learn about how to customize Clerk components, see the [customization documentation](/docs/components/customization/overview).
 
