--- a/docs/integrations/databases/convex.mdx
+++ b/docs/integrations/databases/convex.mdx
@@ -102,16 +102,16 @@ Install Clerk's React SDK by running the following command in your terminal:
   ```bash filename="terminal"
   yarn add @clerk/clerk-react
   ```
-  
+
   ```bash filename="terminal"
   pnpm add @clerk/clerk-react
   ```
 
 </CodeBlockTabs>
 
-### Set environment keys
+### Set environment variables
 
-In your React project's root folder, you may have a `.env.local` file alongside `package.json` and other configuration files. If you don't see it, create it.
+In your React project's root folder, you may have an `.env.local` file alongside `package.json` and other configuration files. If you don't see it, create it.
 
 Add the following code to your `.env.local` file to set your public key.
 
@@ -171,11 +171,11 @@ import { query } from './_generated/server';
 
 export default query(async (ctx) => {
   const user = await ctx.auth.getUserIdentity();
-  
+
   if (user === null) {
     return null;
   }
-  
+
   return user.tokenIdentifier;
 });
 ```
