--- a/docs/quickstarts/gatsby.mdx
+++ b/docs/quickstarts/gatsby.mdx
@@ -10,7 +10,9 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 <Steps>
 ### Install `gatsby-plugin-clerk`
 
-Once you have a React application ready, you need to install Clerk's React SDK. This gives you access to our prebuilt components and hooks for React applications.
+Clerk's Gatsby SDK has prebuilt components, React hooks, and helpers to make user authentication easier.
+
+To get started using Clerk with Gatsby, add the SDK to your project:
 
 <CodeBlockTabs type="installer" options={["npm", "yarn", "pnpm"]}>
   ```bash filename="terminal"
@@ -26,9 +28,9 @@ Once you have a React application ready, you need to install Clerk's React SDK. 
   ```
 </CodeBlockTabs>
 
-### Set environment keys
+### Set environment variables
 
-Below is an example of your `.env.development` file. 
+Below is an example of your `.env.development` file.
 
 **Pro tip!** If you are signed into your Clerk Dashboard, your secret key should become visible by clicking on the eye icon. Otherwise, you can find your keys in the Clerk Dashboard on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page.
 
