--- a/docs/references/nextjs/trpc.mdx
+++ b/docs/references/nextjs/trpc.mdx
@@ -33,9 +33,9 @@ Clerk's Next.js SDK gives you access to prebuilt components and hooks, as well a
   ```
 </CodeBlockTabs>
 
-### Set environment keys
+### Set environment variables
 
-Below is an example of a `.env.local` file. 
+Below is an example of an `.env.local` file.
 
 **Pro tip!** If you are signed into your Clerk Dashboard, your secret key should become visible by clicking on the eye icon. Otherwise, you can find your keys in the Clerk Dashboard on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page.
 
