--- a/docs/references/nodejs/overview.mdx
+++ b/docs/references/nodejs/overview.mdx
@@ -9,7 +9,7 @@ description: Learn how to integrate Node.js into your Clerk application.
 
 <Steps>
 
-### Create a Clerk application 
+### Create a Clerk application
 
 You need to create a Clerk application in your Clerk Dashboard before you can set up Clerk Node.js. For more information, check out our [Set up your application](/docs/quickstarts/setup-clerk) guide.
 
@@ -31,9 +31,9 @@ pnpm add @clerk/clerk-sdk-node
 ```
 </CodeBlockTabs>
 
-### Set environment keys
+### Set environment variables
 
-Below is an example of a `.env.local` file. 
+Below is an example of an `.env.local` file.
 
 **Pro tip!** If you are signed into your Clerk Dashboard, your secret key should become visible by clicking on the eye icon. Otherwise, you can find your keys in the Clerk Dashboard on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page.
 
@@ -191,10 +191,10 @@ import Cookies from 'cookies';
 // query string parameter
 const sessionId = req.query._clerk_session_id;
 
-// Note: Clerk stores the clientToken in a cookie 
+// Note: Clerk stores the clientToken in a cookie
 // named "__session" for Firebase compatibility
 const cookies = new Cookies(req, res);
-const clientToken = cookies.get('__session');  
+const clientToken = cookies.get('__session');
 
 const session = await sessions.verifySession(sessionId, clientToken);
 ```
@@ -207,10 +207,10 @@ Using the last active session is appropriate when determining the user after a n
 import { clients, sessions } from '@clerk/clerk-sdk-node';
 import Cookies from 'cookies';
 
-// Note: Clerk stores the clientToken in a cookie 
+// Note: Clerk stores the clientToken in a cookie
 // named "__session" for Firebase compatibility
 const cookies = new Cookies(req, res);
-const clientToken = cookies.get('__session');  
+const clientToken = cookies.get('__session');
 
 const client = await clients.verifyClient(clientToken);
 const sessionId = client.lastActiveSessionId;
