--- a/docs/references/redwood/overview.mdx
+++ b/docs/references/redwood/overview.mdx
@@ -14,9 +14,9 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 yarn create redwood-app my-redwood-project --typescript
 ```
 
-### Set environment keys
+### Set environment variables
 
-Below is an example of a `.env.local` file. 
+Below is an example of an `.env.local` file.
 
 **Pro tip!** If you are signed into your Clerk Dashboard, your secret key should become visible by clicking on the eye icon. Otherwise, you can find your keys in the Clerk Dashboard on the [API Keys](https://dashboard.clerk.com/last-active?path=api-keys) page.
 
