fix incorrect closing element

--- a/docs/components/control/redirect-to-createorganization.mdx
+++ b/docs/components/control/redirect-to-createorganization.mdx
@@ -58,7 +58,7 @@ The `<RedirectToCreateOrganization />` component will navigate to the create org
         <SignedOut>
           Please Sign In
         </SignedOut>
-      </div>
+      </ClerkProvider>
     );
   }
   ```
