update org guides

--- a/docs/organizations/creating-organizations.mdx
+++ b/docs/organizations/creating-organizations.mdx
@@ -7,20 +7,24 @@ description: Learn how to create an organization in your Clerk instance.
 
 Organizations are created by your end users. Whichever signed-in user creates an organization takes on the [**Creator** role](/docs/organizations/roles-permissions#the-creator-role) for that organization.
 
-The only required parameter when creating a new organization is the organization name, which can be any string. In React and Next.js applications, the [`useOrganizationList()`](/docs/references/react/use-organization-list) hook returns the `createOrganization` method. In JavaScript applications, the same method is available directly on the [`Clerk` object](/docs/references/javascript/clerk/create-organization).
+There are two ways to create an organization:
+- Using the `<CreateOrganization />` component
+- Using the `createOrganization()` method
 
-The `createOrganization` method can also be accessed through the [Backend API](/docs/references/backend/organization/create-organization).
+## Create an organization using the `<CreateOrganization />` component
 
-## Organization slug
+The simplest way to create an organization is to use Clerk's `<CreateOrganization />` component. The `<CreateOrganization />` component is used to render an organization creation UI that allows users to create brand new organizations within your application. See the [component reference](/docs/components/organization/create-organization) for more information.
 
-When creating an organization, you can specify an optional slug for the new organization. If provided, the organization slug can contain only lowercase alphanumeric characters (letters and digits) and the dash "-". Organization slugs must be unique for the instance.
+## Create an organization using the `createOrganization()` method
 
-## Usage
+If you would like to create an organization programmatically, you can use the `createOrganization()` method. In React and Next.js applications, you can access the `createOrganization` method via the [`useOrganizationList()`](/docs/references/react/use-organization-list) hook. In JavaScript applications, the same method is available directly on the [`Clerk` object](/docs/references/javascript/clerk/organization-methods#create-organization). The `createOrganization` method can also be accessed through the [Backend SDK](/docs/references/backend/organization/create-organization).
+
+The only required parameter when creating a new organization is the organization name, which can be any string. You can also specify an optional slug for the new organization. If provided, the organization slug can contain only lowercase alphanumeric characters (letters and digits) and the dash "-". Organization slugs must be unique for the instance.
 
 {/* TODO (DOCS-316): Update and validate these code examples. */}
 
 <CodeBlockTabs type="framework" options={["Next.js", "React", "JavaScript"]}>
-```jsx 
+```jsx
 // Form to create a new organization. The current user
 // will be given the Creator role.
 import { useOrganizationList } from "@clerk/nextjs";
@@ -35,7 +39,7 @@ export default function CreateOrganization() {
     createOrganization({ name: organizationName });
     setOrganizationName("");
   };
-  
+
   return (
     <form onSubmit={handleSubmit}>
       <input
@@ -65,7 +69,7 @@ export default function CreateOrganization() {
     createOrganization({ name: organizationName });
     setOrganizationName("");
   };
-  
+
   return (
     <form onSubmit={handleSubmit}>
       <input
