--- a/docs/organizations/managing-roles.mdx
+++ b/docs/organizations/managing-roles.mdx
@@ -11,201 +11,35 @@ The [`useOrganization()`](/docs/references/react/use-organization) hook can be u
 
 The [`useOrganization()`](/docs/references/react/use-organization) hook can also be used to retrieve the list of invitations for the currently active organization. The [`revoke`](/docs/references/javascript/organization-invitation#revoke) method can be called on the invitation object to revoke the invitation.
 
-Methods for [changing a member's role](/docs/references/backend/organization/update-organization-membership), [removing a member](/docs/references/backend/organization/delete-organization-membership), and [revoking an invitation](/docs/references/backend/organization/revoke-organization-invitation) are also available on the [Backend API](/docs/references/backend/overview). 
+Methods for [changing a member's role](/docs/references/backend/organization/update-organization-membership), [removing a member](/docs/references/backend/organization/delete-organization-membership), and [revoking an invitation](/docs/references/backend/organization/revoke-organization-invitation) are also available on the [Backend API](/docs/references/backend/overview).
 
 ## Usage
 
-{/* TODO (DOCS-316): Update and validate these examples. */}
-
 <CodeBlockTabs type="framework" options={["Next.js", "React", "JavaScript"]}>
-```tsx filename="pages/organizations/[id].ts"
-import { useState, useEffect } from "react";
-import { useOrganization } from "@clerk/nextjs";
-import type { OrganizationMembershipResource } from "@clerk/types";
+```tsx filename="pages/organizations/[id].tsx"
+import { useState, useEffect, ChangeEventHandler, useRef } from "react"
+import { useOrganization, useUser } from "@clerk/nextjs"
+import type { OrganizationCustomRoleKey } from "@clerk/types"
 
-// View and manage active organization members, 
-// along with any pending invitations.
-// Invite new members.
-export default function Organization() {
-  const {
-    organization: currentOrganization,
-    membership,
-    isLoaded,
-  } = useOrganization();
-
-  if (!isLoaded || !currentOrganization) {
-    return null;
-  }
-
-  const isAdmin = membership.role === "admin";
-  return (
-    <>
-      <h1>Organization: {currentOrganization.name}</h1>
-      <MemberList />
-      {isAdmin && <InvitationList />}
-    </>
-  );
+export const OrgMembersParams = {
+  memberships: {
+    pageSize: 5,
+    keepPreviousData: true,
+  },
 }
 
-// List of organization memberships. Administrators can
-// change member roles or remove members from the organization.
-function MemberList() {
-  const { membershipList, membership } = useOrganization({
-    membershipList: {},
-  });
-
-  if (!membershipList) {
-    return null;
-  }
-
-  const isCurrentUserAdmin = membership.role === "admin";
-
-  return (
-    <div>
-      <h2>Organization members</h2>
-      <ul>
-        {membershipList.map((m) => (
-          <li key={m.id}>
-            {m.publicUserData.firstName} {m.publicUserData.lastName} &lt;
-            {m.publicUserData.identifier}&gt; :: {m.role}
-            {isCurrentUserAdmin && <AdminControls membership={m} />}
-          </li>
-        ))}
-      </ul>
-    </div>
-  );
+export const OrgInvitationsParams = {
+  invitations: {
+    pageSize: 5,
+    keepPreviousData: true,
+  },
 }
-
-function AdminControls({
-  membership,
-}: {
-  membership: OrganizationMembershipResource;
-}){
-  const [disabled, setDisabled] = useState(false);
-  const {
-    user: { id: userId },
-  } = useUser();
-
-  if (membership.publicUserData.userId === userId) {
-    return null;
-  }
-
-  const remove = async () => {
-    setDisabled(true);
-    await membership.destroy();
-  };
-
-  const changeRole = async (role: MembershipRole) => {
-    setDisabled(true);
-    await membership.update({ role });
-    setDisabled(false);
-  };
-
-  return (
-    <>
-      ::{" "}
-      <button disabled={disabled} onClick={remove}>
-        Remove member
-      </button>{" "}
-      {membership.role === "admin" ? (
-        <button disabled={disabled} onClick={() => changeRole("org:member")}>
-          Change to member
-        </button>
-      ) : (
-        <button disabled={disabled} onClick={() => changeRole("admin")}>
-          Change to admin
-        </button>
-      )}
-    </>
-  );
-};
-
-// List of pending invitations to an organization. 
-// You can invite new organization members and 
-// revoke already sent invitations.
-function InvitationList() {
-  const { invitationList } = useOrganization();
-
-  if (!invitationList) {
-    return null;
-  }
-
-  const revoke = async (inv) => {
-    await inv.revoke();
-  };
-
-  return (
-    <div>
-      <h2>Invite member</h2>
-      <InviteMember />
-
-      <h2>Pending invitations</h2>
-      <ul>
-        {invitationList.map((i) => (
-          <li key={i.id}>
-            {i.emailAddress} <button onClick={() => revoke(i)}>Revoke</button>
-          </li>
-        ))}
-      </ul>
-    </div>
-  );
+export const OrgMembershipRequestsParams = {
+  membershipRequests: {
+    pageSize: 5,
+    keepPreviousData: true,
+  },
 }
-
-function InviteMember(){
-  const { organization } = useOrganization();
-  const [emailAddress, setEmailAddress] = useState("");
-  const [role, setRole] = useState<"org:member" | "admin">("org:member");
-  const [disabled, setDisabled] = useState(false);
-
-  const onSubmit = async (e) => {
-    e.preventDefault();
-    setDisabled(true);
-    await organization.inviteMember({ emailAddress, role });
-    setEmailAddress("");
-    setRole("org:member");
-    setDisabled(false);
-  };
-
-  return (
-    <form onSubmit={onSubmit}>
-      <input
-        type="text"
-        placeholder="Email address"
-        value={emailAddress}
-        onChange={(e) => setEmailAddress(e.target.value)}
-      />
-      <label>
-        <input
-          type="radio"
-          checked={role === "admin"}
-          onChange={() => {
-            setRole("admin");
-          }}
-        />{" "}
-        Admin
-      </label>
-      <label>
-        <input
-          type="radio"
-          checked={role === "org:member"}
-          onChange={() => {
-            setRole("org:member");
-          }}
-        />{" "}
-        Member
-      </label>{" "}
-      <button type="submit" disabled={disabled}>
-        Invite
-      </button>
-    </form>
-  );
-};
-```
-
-```tsx
-import { useState, useEffect } from "react";
-import { useOrganization } from "@clerk/clerk-react";
-import type { OrganizationMembershipResource } from "@clerk/types";
 
 // View and manage active organization members,
 // along with any pending invitations.
@@ -213,7 +47,6 @@ import type { OrganizationMembershipResource } from "@clerk/types";
 export default function Organization() {
   const {
     organization: currentOrganization,
-    membership,
     isLoaded,
   } = useOrganization();
 
@@ -221,180 +54,687 @@ export default function Organization() {
     return null;
   }
 
-  const isAdmin = membership.role === "admin";
   return (
     <>
       <h1>Organization: {currentOrganization.name}</h1>
-      <MemberList />
-      {isAdmin && <InvitationList />}
+      <h2 className="mb-6 mt-12">Custom List Invitations</h2>
+      <OrgInvitations />
+      <h2 className="mb-6 mt-12">Custom List Membership Requests</h2>
+      <OrgMembershipRequests />
+      <h2 className="mb-6 mt-12">Custom List Memberships</h2>
+      <OrgMembers />
+      <h2 className="mb-6 mt-12">Custom Invite Form</h2>
+      <OrgInviteMemberForm />
     </>
   );
 }
 
 // List of organization memberships. Administrators can
 // change member roles or remove members from the organization.
-function MemberList() {
-  const { membershipList, membership } = useOrganization({
-    membershipList: {},
-  });
+export const OrgMembers = () => {
+  const { user } = useUser()
+  const { isLoaded, memberships } = useOrganization(OrgMembersParams)
 
-  if (!membershipList) {
-    return null;
+  if (!isLoaded) {
+    return <>Loading</>
   }
-
-  const isCurrentUserAdmin = membership.role === "admin";
-
-  return (
-    <div>
-      <h2>Organization members</h2>
-      <ul>
-        {membershipList.map((m) => (
-          <li key={m.id}>
-            {m.publicUserData.firstName} {m.publicUserData.lastName} &lt;
-            {m.publicUserData.identifier}&gt; :: {m.role}
-            {isCurrentUserAdmin && <AdminControls membership={m} />}
-          </li>
-        ))}
-      </ul>
-    </div>
-  );
-}
-
-function AdminControls({
-  membership,
-}: {
-  membership: OrganizationMembershipResource;
-}){
-  const [disabled, setDisabled] = useState(false);
-  const {
-    user: { id: userId },
-  } = useUser();
-
-  if (membership.publicUserData.userId === userId) {
-    return null;
-  }
-
-  const remove = async () => {
-    setDisabled(true);
-    await membership.destroy();
-  };
-
-  const changeRole = async (role: MembershipRole) => {
-    setDisabled(true);
-    await membership.update({ role });
-    setDisabled(false);
-  };
 
   return (
     <>
-      ::{" "}
-      <button disabled={disabled} onClick={remove}>
-        Remove member
-      </button>{" "}
-      {membership.role === "admin" ? (
-        <button disabled={disabled} onClick={() => changeRole("org:member")}>
-          Change to member
+      <table>
+        <thead>
+          <tr>
+            <th>User</th>
+            <th>Joined</th>
+            <th>Role</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          {memberships?.data?.map((mem) => (
+            <tr key={mem.id}>
+              <td>
+                {mem.publicUserData.identifier}{" "}
+                {mem.publicUserData.userId === user?.id && "(You)"}
+              </td>
+              <td>{mem.createdAt.toLocaleDateString()}</td>
+              <td>
+                <SelectRole
+                  defaultRole={mem.role}
+                  onChange={async (e) => {
+                    await mem.update({
+                      role: e.target.value as OrganizationCustomRoleKey,
+                    })
+                    await memberships?.revalidate()
+                  }}
+                />
+              </td>
+              <td>
+                <button
+                  onClick={async () => {
+                    await mem.destroy()
+                    await memberships?.revalidate()
+                  }}
+                >
+                  Remove
+                </button>
+              </td>
+            </tr>
+          ))}
+        </tbody>
+      </table>
+
+      <div className="flex">
+        <button
+          className="inline-block"
+          disabled={!memberships?.hasPreviousPage || memberships?.isFetching}
+          onClick={() => memberships?.fetchPrevious?.()}
+        >
+          Previous
         </button>
-      ) : (
-        <button disabled={disabled} onClick={() => changeRole("admin")}>
-          Change to admin
+
+        <button
+          className="inline-block"
+          disabled={!memberships?.hasNextPage || memberships?.isFetching}
+          onClick={() => memberships?.fetchNext?.()}
+        >
+          Next
         </button>
-      )}
+      </div>
     </>
-  );
-};
-
-// List of organization pending invitations. 
-// You can invite new organization members and 
-// revoke already sent invitations.
-function InvitationList() {
-  const { invitationList } = useOrganization();
-
-  if (!invitationList) {
-    return null;
-  }
-
-  const revoke = async (inv) => {
-    await inv.revoke();
-  };
-
-  return (
-    <div>
-      <h2>Invite member</h2>
-      <InviteMember />
-
-      <h2>Pending invitations</h2>
-      <ul>
-        {invitationList.map((i) => (
-          <li key={i.id}>
-            {i.emailAddress} <button onClick={() => revoke(i)}>Revoke</button>
-          </li>
-        ))}
-      </ul>
-    </div>
-  );
+  )
 }
 
-function InviteMember(){
-  const { organization } = useOrganization();
-  const [emailAddress, setEmailAddress] = useState("");
-  const [role, setRole] = useState<"org:member" | "admin">("org:member");
-  const [disabled, setDisabled] = useState(false);
+// List of pending invitations to an organization.
+// You can invite new organization members and
+// revoke already sent invitations.
+export const OrgInvitations = () => {
+  const { isLoaded, invitations, memberships } = useOrganization({
+    ...OrgInvitationsParams,
+    ...OrgMembersParams,
+  })
+
+  if (!isLoaded) {
+    return <>Loading</>
+  }
+
+  return (
+    <>
+      <table>
+        <thead>
+          <tr>
+            <th>User</th>
+            <th>Invited</th>
+            <th>Role</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          {invitations?.data?.map((inv) => (
+            <tr key={inv.id}>
+              <td>{inv.emailAddress}</td>
+              <td>{inv.createdAt.toLocaleDateString()}</td>
+              <td>{inv.role}</td>
+              <td>
+                <button
+                  onClick={async () => {
+                    await inv.revoke()
+                    await Promise.all([
+                      memberships?.revalidate,
+                      invitations?.revalidate,
+                    ])
+                  }}
+                >
+                  Revoke
+                </button>
+              </td>
+            </tr>
+          ))}
+        </tbody>
+      </table>
+
+      <div className="flex">
+        <button
+          className="inline-block"
+          disabled={!invitations?.hasPreviousPage || invitations?.isFetching}
+          onClick={() => invitations?.fetchPrevious?.()}
+        >
+          Previous
+        </button>
+
+        <button
+          className="inline-block"
+          disabled={!invitations?.hasNextPage || invitations?.isFetching}
+          onClick={() => invitations?.fetchNext?.()}
+        >
+          Next
+        </button>
+      </div>
+    </>
+  )
+}
+
+export const OrgMembershipRequests = () => {
+  const { isLoaded, membershipRequests } = useOrganization(
+    OrgMembershipRequestsParams
+  )
+
+  if (!isLoaded) {
+    return <>Loading</>
+  }
+
+  return (
+    <>
+      <table>
+        <thead>
+          <tr>
+            <th>User</th>
+            <th>Requested Access</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          {membershipRequests?.data?.map((mem) => (
+            <tr key={mem.id}>
+              <td>{mem.publicUserData.identifier}</td>
+              <td>{mem.createdAt.toLocaleDateString()}</td>
+              <td></td>
+            </tr>
+          ))}
+        </tbody>
+      </table>
+
+      <div className="flex">
+        <button
+          className="inline-block"
+          disabled={
+            !membershipRequests?.hasPreviousPage ||
+            membershipRequests?.isFetching
+          }
+          onClick={() => membershipRequests?.fetchPrevious?.()}
+        >
+          Previous
+        </button>
+
+        <button
+          className="inline-block"
+          disabled={
+            !membershipRequests?.hasNextPage || membershipRequests?.isFetching
+          }
+          onClick={() => membershipRequests?.fetchNext?.()}
+        >
+          Next
+        </button>
+      </div>
+    </>
+  )
+}
+
+export const OrgInviteMemberForm = () => {
+  const { isLoaded, organization, invitations } = useOrganization(OrgInvitationsParams)
+  const [emailAddress, setEmailAddress] = useState("")
+  const [disabled, setDisabled] = useState(false)
+
+  if (!isLoaded || !organization) {
+    return <>Loading</>
+  }
 
   const onSubmit = async (e) => {
-    e.preventDefault();
-    setDisabled(true);
-    await organization.inviteMember({ emailAddress, role });
-    setEmailAddress("");
-    setRole("org:member");
-    setDisabled(false);
-  };
+    e.preventDefault()
+
+    const submittedData = Object.fromEntries(
+      new FormData(e.currentTarget).entries()
+    ) as {
+      email: string | undefined
+      role: OrganizationCustomRoleKey | undefined
+    }
+
+    if (!submittedData.email || !submittedData.role) {
+      return
+    }
+
+    setDisabled(true)
+    await organization.inviteMember({
+      emailAddress: submittedData.email,
+      role: submittedData.role,
+    })
+    await invitations?.revalidate?.()
+    setEmailAddress("")
+    setDisabled(false)
+  }
 
   return (
     <form onSubmit={onSubmit}>
       <input
+        name="email"
         type="text"
         placeholder="Email address"
         value={emailAddress}
         onChange={(e) => setEmailAddress(e.target.value)}
       />
-      <label>
-        <input
-          type="radio"
-          checked={role === "admin"}
-          onChange={() => {
-            setRole("admin");
-          }}
-        />{" "}
-        Admin
-      </label>
-      <label>
-        <input
-          type="radio"
-          checked={role === "org:member"}
-          onChange={() => {
-            setRole("org:member");
-          }}
-        />{" "}
-        Member
-      </label>{" "}
+      <label>Role</label>
+      <SelectRole fieldName={"role"} />
       <button type="submit" disabled={disabled}>
         Invite
       </button>
     </form>
+  )
+}
+
+type SelectRoleProps = {
+  fieldName?: string
+  isDisabled?: boolean
+  onChange?: ChangeEventHandler<HTMLSelectElement>
+  defaultRole?: string
+}
+
+const SelectRole = (props: SelectRoleProps) => {
+  const { fieldName, isDisabled = false, onChange, defaultRole } = props
+  const { organization } = useOrganization()
+  const [fetchedRoles, setRoles] = useState<OrganizationCustomRoleKey[]>([])
+  const isPopulated = useRef(false)
+
+  useEffect(() => {
+    if (isPopulated.current) return
+    organization
+      ?.getRoles({
+        pageSize: 20,
+        initialPage: 1,
+      })
+      .then((res) => {
+        isPopulated.current = true
+        setRoles(
+          res.data.map((roles) => roles.key as OrganizationCustomRoleKey)
+        )
+      })
+  }, [organization?.id])
+
+  if (fetchedRoles.length === 0) return null
+
+  return (
+    <select
+      name={fieldName}
+      disabled={isDisabled}
+      aria-disabled={isDisabled}
+      onChange={onChange}
+      defaultValue={defaultRole}
+    >
+      {fetchedRoles?.map((roleKey) => (
+        <option key={roleKey} value={roleKey}>
+          {roleKey}
+        </option>
+      ))}
+    </select>
+  )
+}
+```
+
+```tsx
+import { useState, useEffect, ChangeEventHandler, useRef } from "react"
+import { useOrganization, useUser } from "@clerk/clerk-react"
+import type { OrganizationCustomRoleKey } from "@clerk/types"
+
+export const OrgMembersParams = {
+  memberships: {
+    pageSize: 5,
+    keepPreviousData: true,
+  },
+}
+
+export const OrgInvitationsParams = {
+  invitations: {
+    pageSize: 5,
+    keepPreviousData: true,
+  },
+}
+export const OrgMembershipRequestsParams = {
+  membershipRequests: {
+    pageSize: 5,
+    keepPreviousData: true,
+  },
+}
+
+// View and manage active organization members,
+// along with any pending invitations.
+// Invite new members.
+export default function Organization() {
+  const {
+    organization: currentOrganization,
+    isLoaded,
+  } = useOrganization();
+
+  if (!isLoaded || !currentOrganization) {
+    return null;
+  }
+
+  return (
+    <>
+      <h1>Organization: {currentOrganization.name}</h1>
+      <h2 className="mb-6 mt-12">Custom List Invitations</h2>
+      <OrgInvitations />
+      <h2 className="mb-6 mt-12">Custom List Membership Requests</h2>
+      <OrgMembershipRequests />
+      <h2 className="mb-6 mt-12">Custom List Memberships</h2>
+      <OrgMembers />
+      <h2 className="mb-6 mt-12">Custom Invite Form</h2>
+      <OrgInviteMemberForm />
+    </>
   );
-};
+}
+
+// List of organization memberships. Administrators can
+// change member roles or remove members from the organization.
+export const OrgMembers = () => {
+  const { user } = useUser()
+  const { isLoaded, memberships } = useOrganization(OrgMembersParams)
+
+  if (!isLoaded) {
+    return <>Loading</>
+  }
+
+  return (
+    <>
+      <table>
+        <thead>
+          <tr>
+            <th>User</th>
+            <th>Joined</th>
+            <th>Role</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          {memberships?.data?.map((mem) => (
+            <tr key={mem.id}>
+              <td>
+                {mem.publicUserData.identifier}{" "}
+                {mem.publicUserData.userId === user?.id && "(You)"}
+              </td>
+              <td>{mem.createdAt.toLocaleDateString()}</td>
+              <td>
+                <SelectRole
+                  defaultRole={mem.role}
+                  onChange={async (e) => {
+                    await mem.update({
+                      role: e.target.value as OrganizationCustomRoleKey,
+                    })
+                    await memberships?.revalidate()
+                  }}
+                />
+              </td>
+              <td>
+                <button
+                  onClick={async () => {
+                    await mem.destroy()
+                    await memberships?.revalidate()
+                  }}
+                >
+                  Remove
+                </button>
+              </td>
+            </tr>
+          ))}
+        </tbody>
+      </table>
+
+      <div className="flex">
+        <button
+          className="inline-block"
+          disabled={!memberships?.hasPreviousPage || memberships?.isFetching}
+          onClick={() => memberships?.fetchPrevious?.()}
+        >
+          Previous
+        </button>
+
+        <button
+          className="inline-block"
+          disabled={!memberships?.hasNextPage || memberships?.isFetching}
+          onClick={() => memberships?.fetchNext?.()}
+        >
+          Next
+        </button>
+      </div>
+    </>
+  )
+}
+
+// List of pending invitations to an organization.
+// You can invite new organization members and
+// revoke already sent invitations.
+export const OrgInvitations = () => {
+  const { isLoaded, invitations, memberships } = useOrganization({
+    ...OrgInvitationsParams,
+    ...OrgMembersParams,
+  })
+
+  if (!isLoaded) {
+    return <>Loading</>
+  }
+
+  return (
+    <>
+      <table>
+        <thead>
+          <tr>
+            <th>User</th>
+            <th>Invited</th>
+            <th>Role</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          {invitations?.data?.map((inv) => (
+            <tr key={inv.id}>
+              <td>{inv.emailAddress}</td>
+              <td>{inv.createdAt.toLocaleDateString()}</td>
+              <td>{inv.role}</td>
+              <td>
+                <button
+                  onClick={async () => {
+                    await inv.revoke()
+                    await Promise.all([
+                      memberships?.revalidate,
+                      invitations?.revalidate,
+                    ])
+                  }}
+                >
+                  Revoke
+                </button>
+              </td>
+            </tr>
+          ))}
+        </tbody>
+      </table>
+
+      <div className="flex">
+        <button
+          className="inline-block"
+          disabled={!invitations?.hasPreviousPage || invitations?.isFetching}
+          onClick={() => invitations?.fetchPrevious?.()}
+        >
+          Previous
+        </button>
+
+        <button
+          className="inline-block"
+          disabled={!invitations?.hasNextPage || invitations?.isFetching}
+          onClick={() => invitations?.fetchNext?.()}
+        >
+          Next
+        </button>
+      </div>
+    </>
+  )
+}
+
+export const OrgMembershipRequests = () => {
+  const { isLoaded, membershipRequests } = useOrganization(
+    OrgMembershipRequestsParams
+  )
+
+  if (!isLoaded) {
+    return <>Loading</>
+  }
+
+  return (
+    <>
+      <table>
+        <thead>
+          <tr>
+            <th>User</th>
+            <th>Requested Access</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          {membershipRequests?.data?.map((mem) => (
+            <tr key={mem.id}>
+              <td>{mem.publicUserData.identifier}</td>
+              <td>{mem.createdAt.toLocaleDateString()}</td>
+              <td></td>
+            </tr>
+          ))}
+        </tbody>
+      </table>
+
+      <div className="flex">
+        <button
+          className="inline-block"
+          disabled={
+            !membershipRequests?.hasPreviousPage ||
+            membershipRequests?.isFetching
+          }
+          onClick={() => membershipRequests?.fetchPrevious?.()}
+        >
+          Previous
+        </button>
+
+        <button
+          className="inline-block"
+          disabled={
+            !membershipRequests?.hasNextPage || membershipRequests?.isFetching
+          }
+          onClick={() => membershipRequests?.fetchNext?.()}
+        >
+          Next
+        </button>
+      </div>
+    </>
+  )
+}
+
+export const OrgInviteMemberForm = () => {
+  const { isLoaded, organization, invitations } = useOrganization(OrgInvitationsParams)
+  const [emailAddress, setEmailAddress] = useState("")
+  const [disabled, setDisabled] = useState(false)
+
+  if (!isLoaded || !organization) {
+    return <>Loading</>
+  }
+
+  const onSubmit = async (e) => {
+    e.preventDefault()
+
+    const submittedData = Object.fromEntries(
+      new FormData(e.currentTarget).entries()
+    ) as {
+      email: string | undefined
+      role: OrganizationCustomRoleKey | undefined
+    }
+
+    if (!submittedData.email || !submittedData.role) {
+      return
+    }
+
+    setDisabled(true)
+    await organization.inviteMember({
+      emailAddress: submittedData.email,
+      role: submittedData.role,
+    })
+    await invitations?.revalidate?.()
+    setEmailAddress("")
+    setDisabled(false)
+  }
+
+  return (
+    <form onSubmit={onSubmit}>
+      <input
+        name="email"
+        type="text"
+        placeholder="Email address"
+        value={emailAddress}
+        onChange={(e) => setEmailAddress(e.target.value)}
+      />
+      <label>Role</label>
+      <SelectRole fieldName={"role"} />
+      <button type="submit" disabled={disabled}>
+        Invite
+      </button>
+    </form>
+  )
+}
+
+type SelectRoleProps = {
+  fieldName?: string
+  isDisabled?: boolean
+  onChange?: ChangeEventHandler<HTMLSelectElement>
+  defaultRole?: string
+}
+
+const SelectRole = (props: SelectRoleProps) => {
+  const { fieldName, isDisabled = false, onChange, defaultRole } = props
+  const { organization } = useOrganization()
+  const [fetchedRoles, setRoles] = useState<OrganizationCustomRoleKey[]>([])
+  const isPopulated = useRef(false)
+
+  useEffect(() => {
+    if (isPopulated.current) return
+    organization
+      ?.getRoles({
+        pageSize: 20,
+        initialPage: 1,
+      })
+      .then((res) => {
+        isPopulated.current = true
+        setRoles(
+          res.data.map((roles) => roles.key as OrganizationCustomRoleKey)
+        )
+      })
+  }, [organization?.id])
+
+  if (fetchedRoles.length === 0) return null
+
+  return (
+    <select
+      name={fieldName}
+      disabled={isDisabled}
+      aria-disabled={isDisabled}
+      onChange={onChange}
+      defaultValue={defaultRole}
+    >
+      {fetchedRoles?.map((roleKey) => (
+        <option key={roleKey} value={roleKey}>
+          {roleKey}
+        </option>
+      ))}
+    </select>
+  )
+}
 ```
 
 ```js
+<p>List of memberships:</p>
 <ul id="memberships_list"></ul>
+
+<p>List of invitations:</p>
 <ul id="invitations_list"></ul>
 
+<p>Send a new invitation:</p>
 <form id="new_invitation">
   <div>
     <label>Email address</div>
     <br />
-    <input type="email" name="email_address" />
+    <input type="email" id="email_address" name="email_address" />
   </div>
   <button>Invite</button>
 </form>
@@ -403,10 +743,11 @@ function InviteMember(){
   async function renderMemberships(organization, isAdmin) {
     const list = document.getElementById("memberships_list");
     try {
-      const memberships = await organization.getMembers();
+      const { data: memberships } = await organization.getMemberships();
+
       memberships.map((membership) => {
         const li = document.createElement("li");
-        li.textContent = `${membership.identifier} - ${membership.role}`;
+        li.textContent = `${membership.publicUserData.identifier} - ${membership.role}`;
 
         // Add administrative actions; update role and remove member.
         if (isAdmin) {
@@ -441,7 +782,8 @@ function InviteMember(){
   async function renderInvitations(organization, isAdmin) {
     const list = document.getElementById("invitations_list");
     try {
-      const invitations = await organization.getPendingInvitations();
+      const { data: invitations } = await organization.getInvitations();
+
       invitations.map((invitation) => {
         const li = document.createElement("li");
         li.textContent = `${invitation.emailAddress} - ${invitation.role}`;
@@ -467,11 +809,12 @@ function InviteMember(){
   async function init() {
     // This is the current organization ID.
     const organizationId = "org_XXXXXXX";
-    const organizationMemberships = await window.Clerk.getOrganizationMemberships()
-    const currentMembership = organizationMemberships.find(membership 
+    const { data: organizationMemberships } = await window.Clerk.user.getOrganizationMemberships();
+
+    const currentMembership = organizationMemberships.find(membership
       => membership.organization.id === organizationId);
     const currentOrganization = currentMembership.organization;
-    
+
     if (!currentOrganization) {
       return;
     }
@@ -484,7 +827,7 @@ function InviteMember(){
       const form = document.getElementById("new_invitation");
       form.addEventListener("submit", async function(e) {
         e.preventDefault();
-        const inputEl = form.getElementsByTagName("input");
+        const inputEl = document.getElementById("email_address");
         if (!inputEl) {
           return;
         }
@@ -508,4 +851,4 @@ function InviteMember(){
 
 {/* TODO: Should we mention the update method on the OrganizationMembership object? Or the updateMember method on the Organization object? Or the updateOrganizationMembership method from the Backend API? */}
 
-{/* TODO: ## Remove members plus examples? */}
+{/* TODO: Add section for ## Remove members , and add appropriate examples ? */}
